# totetrack

./: .env  .env.dev  .env.example  .env.staging  .gitignore  MULTI_INSTANCE_GUIDE.md  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  dockerfile
.github/: copilot-instructions.md
.github/workflows/: build-and-publish.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  totes.db
backend/app/: crud.py  db.py  email_templates.py  image_store.py  main.py  models.py  schemas.py  security.py
backend/app/utils/email/: sender.py  templates.py
backend/scripts/: add_account.sh
backend/tests/: test_account_scoping.py  test_api_special_chars.py  test_changes.py  test_filename_sanitization.py  test_sanitization.py
frontend/: .env  dockerfile  index.html  nginx-backend-not-found.conf  nginx.conf  package-lock.json  package.json  privkey.pem  totes.db  tsconfig.tsbuildinfo  vite.config.ts
frontend/certs/: dev-cert.pem  dev-key.pem
frontend/scripts/: make-dev-cert.sh
frontend/src/: App.tsx  SidebarRefreshContext.tsx  api.ts  auth.tsx  importExport.ts  main.tsx  types.ts
frontend/src/components/: ItemCard.tsx  ItemForm.tsx  ItemsTable.tsx  LocationDetails.tsx  LocationForm.tsx  LocationTable.tsx  MoveToToteModal.tsx  ProfileModal.tsx  QRLabel.tsx  Sidebar.tsx  StatisticsCards.tsx  ToteDetail.tsx  ToteForm.tsx  ToteTable.tsx  UserForm.tsx  UsersTable.tsx
frontend/src/pages/: CheckedOutItemsPage.tsx  ItemsPage.tsx  LandingPage.tsx  LocationDetailsPage.tsx  LocationsPage.tsx  LoginPage.tsx  MyProfilePage.tsx  PasswordRecoveryPage.tsx  (+7 more)
(+4 files in other folders)
